# ocr-demo

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  Dockerfile.rocm  README.md  README_DE.md  SECURITY.md  docker-compose.cuda.yml  docker-compose.llamacpp.yml  docker-compose.rocm.yml  docker-compose.stack.yml  docker-compose.yml  pyproject.toml  swagger.json
.github/workflows/: ci.yml  release.yml
app/: __init__.py  config.py  main.py  schemas.py
app/api/: routes.py
app/i18n/: __init__.py  compare.py
app/i18n/locales/: de.json  en.json
app/prompts/: plain_ocr.txt  structured_ocr.txt
app/services/: analyze_operation_store.py  backend_router.py  benchmark.py  compare_metrics.py  deskew.py  document_pipeline.py  expert_pipeline.py  layout_detector.py  mlflow_sink.py  ocr_pipeline.py  ocr_service.py  ollama_client.py  pdf_text.py  structured.py  table_structure_recognizer.py  warmed_example_store.py  word_detector.py
app/services/compare_engines/: azure.py  base.py  local_models.py  registry.py  self_peer.py
app/services/inference/: __init__.py  errors.py  factory.py  model_ref.py  ollama.py  openai_compatible.py  protocol.py  registry.py  vision_probe.py
app/static/: app.js  benchmark.css  benchmark.js  i18n.js  styles.css
app/templates/: benchmark.html  index.html
data/ground_truth/: manifest.jsonl
docs/: docker-pytorch.md  inference-providers.md  llamacpp-docker-glm-ocr.md
eval/: __init__.py  metrics.py  run.py
scripts/: docker_install_app_deps.py
tests/: test_analyze_operation_store.py  test_api.py  test_azure_compat.py  test_backend_router.py  test_config_inference.py  test_expert_pipeline.py  test_inference_providers.py  test_inference_providers_api.py  test_layout_device.py  test_locale.py  test_main.py  test_model_ref.py  test_ocr_pipeline.py  test_structured.py  test_vision_probe.py
