[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-demo"
version = "0.2.4"
description = "Minimales OCR-Demo mit Ollama und FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "HN-Tran" },
]
dependencies = [
  "accelerate>=1.13.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "opencv-python-headless>=4.10.0,<5.0.0",
  "pillow>=12.1.0,<13.0.0",
  "pypdfium2>=5.6.0",
  "python-doctr>=0.10.0",
  "python-multipart>=0.0.9,<1.0.0",
  "rapidfuzz>=3.14.3",
  "sentencepiece>=0.2.0,<1.0.0",
  "timm>=1.0.25",
  "torch>=2.0.0",
  "transformers>=5.3.0,<6.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
paddle = ["paddlepaddle>=2.6.0", "paddleocr>=3.0.0"]

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "mypy>=1.11.0,<2.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*", "eval*"]

[tool.setuptools.package-data]
app = ["prompts/*.txt", "templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/api/routes.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
pretty = true
exclude = ["data/"]

disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "doctr",
    "doctr.*",
    "paddleocr",
    "paddleocr.*",
    "paddle",
    "paddle.*",
    "paddlex",
    "paddlex.*",
]
ignore_missing_imports = true
